# controllerESPIDF

./: CMakeLists.txt
components/Peripherals/: CMakeLists.txt
components/Peripherals/include/: AS5048my.h  Driver.h  MessageDefinitions.h  Pinset.h  ProfileGenerator.h  QueueHandler.h  SPImaster.h  SPImaster1.h  USBcom.h  tasksDefinitions.h
components/Peripherals/src/: AS5048my.cpp  Driver.cpp  Pinset.cpp  ProfileGenerator.cpp  QueueHandler.cpp  SPImaster.cpp  SPImaster1.cpp  Serialcom.cpp  USBcom.cpp  tasksDefinitions.cpp
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
